# NotificationService

./: Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
api/v1/: notifications.py
core/: auth.py  config.py  context.py
models/: notifications.py
services/: base_producer.py  kafka_producer.py  queue_producer.py  rabbit_producer.py
storage/: mongo_storage.py
tests/: conftest.py  test_notifications.py
